src/test/deca/context/invalid/operations/bool/invalid_bool_op_geq_str.deca
// Description:
//    test invalid GEQ between int and string
//
// [Begin Result]
//invalid_bool_op_geq_str.deca:12:20: Unsupported operation '>=' between types string and int. Operation '>=' supported only between integer(s) and(or) float(s). (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    boolean a = "1" >= 2;
}